--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                     <li>Who Am I</li>
                     <li>Some text can be replaced with diagrams, e.g. retries</li>
                     <li>Presentation review</li>
+					<li>Idemptotency & Immutability</li>
+					<li>Code Examples</li>
+					<li>Observability</li>
+					<li>What can be on demo? Will be enough time?</li>
                 </ul>
             </section>
 			<section>
@@ -241,6 +245,10 @@
 						<li>Ordering For multi-thread Consumers processing</li>
 					</ul>
 				</section>
+			</section>
+			<section>
+				<img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
+				<h3>Demo</h3>
 			</section>
             <section>
                 <img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
