--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 			</section>
             <section>
                 <img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
-                <h3>Q&A</h3>
+				<p><a href="https://revolut.com/careers">We Are Hiring!</a></p>
             </section>
 		</div>
 	</div>
