--- a/index.html
+++ b/index.html
@@ -36,16 +36,31 @@
 				<img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
 				<h2>Event Sourcing</h2>
 			</section>
+			<section>
+				<h2>Jacek Spólnik</h2>
+				<pre><code data-trim data-noescape>
+					Company.now("Revolut", 1.year)
+						.past("UBS", 3.years)
+						.past("EPAM", 4.years)
+						.past("Apriso", 3.years)
+
+					TechStack.now("Java", 7.years).past("C#", 4.years)
+
+					OpenSource.now("JAlgoArena").past("TradingOffice")
+						.past("NDatabase")
+
+					FavouriteStack.now("Kotlin").past("JavaScript")
+				 </code></pre>
+			</section>
             <section>
                 <h2>TODO</h2>
                 <ul>
-                    <li>Who Am I</li>
+					<li>Presentation review</li>
                     <li>Some text can be replaced with diagrams, e.g. retries</li>
-                    <li>Presentation review</li>
-					<li>Idemptotency & Immutability</li>
 					<li>Code Examples</li>
 					<li>Observability</li>
-					<li>What can be on demo? Will be enough time?</li>
+					<li>What can be on demo? Will be enough time? NewRelic?</li>
+					<li>Some ES facts? E.g. db size, # of events per day/week?</li>
                 </ul>
             </section>
 			<section>
