--- a/index.html
+++ b/index.html
@@ -276,6 +276,11 @@
 
 	<script>
 		Reveal.initialize({
+			controls: true,
+			progress: true,
+			center: true,
+			hash: true,
+			transition: 'convex', // none/fade/slide/convex/concave/zoom
 			dependencies: [
 				{ src: 'plugin/markdown/marked.js' },
 				{ src: 'plugin/markdown/markdown.js' },
