--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="slides">
 			<section>
 				<img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
-				<h2>Event Sourcing</h2>
+				<h2>Event Streaming</h2>
 			</section>
 			<section>
 				<h2>Jacek Spólnik</h2>
