--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 		link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
 		document.getElementsByTagName('head')[0].appendChild(link);
 	</script>
+	<style>
+		body {
+			background-image: url(img/logo_small.png);
+			background-size: 2%;
+			background-repeat: no-repeat;
+			background-position: 2% 97%;
+		}
+	</style>
 </head>
 
 <body>
