Add small logo to footprint

--- a/index.html
+++ b/index.html
@@ -109,22 +109,13 @@
                     <p>Strong Consistency</p>
                 </section>
                 <section>
-                    <h3>Event Persistence</h3>
-                    <ul>
-                        <li>Client Side Journal</li>
-                        <li>Serer side Event Store</li>
-                        <li>Consumers Snapshots</li>
-                    </ul>
+					<p>Event Persistence</p>
+					<img data-src="img/EventStore_Persistence.svg">
                 </section>
-                <section>
-                    <h3>Event Publishing</h3>
-                    <ul>
-                        <li>Asynchronous publish just after transaction</li>
-                        <li>Mark in Journal on success</li>
-                        <li>Background reconciliation</li>
-                        <li>Server ignores duplicates</li>
-                    </ul>
-                </section>
+				<section>
+					<p>Event Publishing</p>
+					<img data-src="img/EventStore_Publishing.svg">
+				</section>
             </section>
 			<section>
 				<section>
