--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 					<h2>Challenges</h2>
 				</section>
 				<section>
-					Achieve p99 of <= 20ms
+					<p>Achieve p99 of <= 20ms</p>
 					<ul>
 						<li>Binary serialization protocol (now JSON)</li>
 						<li>Dedicated write master node with no indexes</li>
@@ -270,7 +270,7 @@
 					</ul>
 				</section>
 				<section>
-					Events Schema
+					<p>Events Schema</p>
 					<ul>
 						<li>Versioning</li>
 						<li>Discovery</li>
@@ -279,7 +279,7 @@
 					</ul>
 				</section>
 				<section>
-					Database Scalability
+					<p>Database Scalability</p>
 					<ul>
 						<li>Regional Sharding</li>
 						<li>Model / Event Type Sharding</li>
