--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 					OpenSource.now("JAlgoArena").past("TradingOffice")
 						.past("NDatabase")
 
-					FavouriteStack.now("Kotlin").past("JavaScript")
+					FavouriteStack.now("GoLang").past("Kotlin")
+						.past("JavaScript")
 				 </code></pre>
 			</section>
             <section>
