--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</section>
 			<section>
 				<h2>Jacek Spólnik</h2>
-				<pre><code data-trim data-noescape>
+				<pre><code data-trim data-noescape >
 					Company.now("Revolut", 1.year)
 						.past("UBS", 3.years)
 						.past("EPAM", 4.years)
@@ -184,11 +184,12 @@
 				</section>
 				<section>
 					Publishing
-					<pre><code data-trim data-noescape>
-						var config = new PublisherConfig(
-							URI.create("http://host:port"));
+					<pre><code data-trim data-noescape lang="java">
+						final var config = new PublisherConfig(
+							URI.create("http://host:port")
+						);
 
-						var persister = AlphaEventPersister
+						final var persister = AlphaEventPersister
 							.withConfig(config)
 							.withAsyncPublisher();
 
@@ -227,7 +228,8 @@
 
 						var subscription = EventStore.withConfig(config).subscribe(
 							() -> figureOutLatestTimestampToReconnectFrom(),
-							filterBy("Account").eventTypeEq("BalanceChangedEvent"),
+							filterBy("Account")
+								.eventTypeEq("BalanceChangedEvent"),
 							new MyEventConsumer());
 						subscription.start().get();
 					</code></pre>
