--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
 						.past("JavaScript")
 				 </code></pre>
 			</section>
-            <section>
-                <h2>TODO</h2>
-                <ul>
-					<li>Observability</li>
-					<li>What can be on demo? Will be enough time? NewRelic?</li>
-					<li>Some ES facts? E.g. db size, # of events per day/week?</li>
-                </ul>
-            </section>
 			<section>
 				<section>
 					<h2>Context</h2>
@@ -279,7 +271,7 @@
 			</section>
 			<section>
 				<img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
-				<h3>Demo</h3>
+				<p><a href="https://insights.newrelic.com/accounts/829069/dashboards/824216?duration=1800000">Demo</a></p>
 			</section>
             <section>
                 <img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
