--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					<h2>Challenges</h2>
 				</section>
 				<section>
-					<p>Achieve p99 of <= 20ms</p>
+					<p>Achieve p99 latency <= 20ms</p>
 					<ul>
 						<li>Binary serialization protocol (now JSON)</li>
 						<li>Dedicated write master node with no indexes</li>
