--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<h2>Why</h2>
 				</section>
 				<section>
-					Revolut's business events audit and distribution.
+					Business events audit and distribution.
 					<ul>
 						<li>Always Correct</li>
 						<li>Highly Available</li>
@@ -112,6 +112,16 @@
 				<section>
 					<p>Design</p>
 					<img data-src="img/EventStore_Design.svg" height="450">
+				</section>
+				<section>
+					Use Cases
+					<ul>
+						<li>Audit log of user actions used by customer service</li>
+						<li>Realtime fraud detection with event-driven ML-based risk scoring model</li>
+						<li>Automatic real-time FX risk hedging</li>
+						<li>Real-time PnL</li>
+						<li>Automated marketing campaigns, promotions</li>
+					</ul>
 				</section>
 			</section>
             <section>
@@ -225,18 +235,6 @@
 							new MyEventConsumer());
 						subscription.start();
 					</code></pre>
-				</section>
-			</section>
-			<section>
-				<section>
-					Use Cases
-					<ul>
-						<li>meaningful audit log of user actions used by customer service</li>
-						<li>realtime fraud detection with event-driven ML-based risk scoring model</li>
-						<li>automatic real-time FX risk hedging</li>
-						<li>real-time PnL</li>
-						<li>automated marketing campaigns, promotions</li>
-					</ul>
 				</section>
 			</section>
 			<section>
