--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 			</section>
 			<section>
 				<img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
-				<p><a href="https://insights.newrelic.com/accounts/829069/dashboards/824216?duration=1800000">Demo</a></p>
+				<p><a href="https://insights.newrelic.com/accounts/829069/dashboards/824216?kiosk=true">Demo</a></p>
 			</section>
             <section>
                 <img data-src="img/logo.png" style="background:none; border:none; box-shadow:none;" height="150">
