--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 				<h2>Event Streaming</h2>
 			</section>
 			<section>
+				<img data-src="img/geecon.jpg" style="background:white; border-radius: 5px; box-shadow:none; padding: 10px 20px" height="150">
+				<p>Join at</p>
+				<h3>slido.com</h3>
+				<p>#geecon2019</p>
+			</section>
+			<section>
 				<h2>Jacek Spólnik</h2>
 				<pre><code data-trim data-noescape >
 					Company.now("Revolut", 1.year)
