Add geecon related slide

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<img data-src="img/geecon.jpg" style="background:white; border-radius: 5px; box-shadow:none; padding: 10px 20px" height="150">
 				<p>Join at</p>
 				<h3>slido.com</h3>
-				<p>#geecon2019</p>
+				<p>#geecon2019 / <span style="color: #efef8f">Room 11</span></p>
 			</section>
 			<section>
 				<h2>Jacek Spólnik</h2>
